--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
 }
 
 body {
-  font-family: 'Open Sans';
+    font-family: 'Open Sans';
+    background-color: #E8E8E8;
 }
 
 /**
@@ -34,7 +35,6 @@ header {
     padding: 30px 0;
     width: 100%;
     z-index: 1;
-    border: 1px solid black;
     background-color: #E8E8E8;
 }
 
@@ -46,7 +46,6 @@ nav {
     font-weight: bold;
     list-style: none;
     text-align: left;
-    border: 1px solid black;
     max-width: 650px;
 }
 nav ul li {
@@ -56,11 +55,9 @@ nav ul li {
 nav ul li a {
     color: #4A4A4A;
     text-decoration: none;
-    border: 1px solid black;
 }
 nav ul li .nav-name {
     text-transform: uppercase;
-    border: 1px solid black;
     font-size: 10pt;
 }
 nav ul li a span {
@@ -71,14 +68,12 @@ nav ul li a span {
     text-align: left;
 }
 .main-nav {
-    border: 1px solid black;
     font-size: 10pt;
     padding: 10px 0 10px 0;
     background-color: #096D25;
 }
 .main-nav ul li {
     display: inline-block;
-    border: 1px solid black;
     margin: 0 7px 0 0;
     list-style: none;
 }
@@ -151,11 +146,11 @@ nav ul li a span {
     background-color: #096D25;
     bottom: 0;
     width: 100%;
-    border: none;
+    border: 1px solid #096D25;
     color: #fff;
 }
 .announce {
-    margin-top: 119px;
+    margin-top: 99px;
 }
 .feat {
     right: 0;
@@ -163,4 +158,61 @@ nav ul li a span {
 }
 .newsbtn {
     margin-top: 25px;
+}
+.sub-content {
+    width: 48%;
+    border: 1px solid #ccc;
+    overflow: hidden;
+    position: relative;
+    float: left;
+    margin-right: 1.6%;
+    margin-top: 20px;
+    border-top: 4px solid #096D25;
+    height: 235px;
+    color: #9D8F7F;
+}
+.sub-content h3,h5,h6{
+    padding: 30px;
+    padding-top: 10px;
+}
+.sub-content h3 {
+    border-bottom: 1px solid #ccc;
+    padding-top: 20px;
+    color: #096D25;
+}
+.subscribe .content-input {
+    padding: 15px;
+    width: 60%;
+    margin-left: 30px;
+}
+.content-btn {
+    padding: 16px;
+    border: 1px solid #096D25;
+    width: 20%;
+    color: #fff;
+    background-color: #096D25;
+}
+
+
+
+.last-content {
+    width: 100%;
+    border: 1px solid #ccc;
+    overflow: hidden;
+    position: relative;
+    float: left;
+    margin-right: 1.1%;
+    margin-top: 20px;
+    border-top: 4px solid #096D25;
+    height: 520px;
+    color: #9D8F7F;
+}
+.last-content h3,h5,h6{
+    padding: 30px;
+    padding-top: 10px;
+}
+.last-content h3 {
+    border-bottom: 1px solid #ccc;
+    padding-top: 20px;
+    color: #096D25;
 }
